[gd_scene load_steps=5 format=3 uid="uid://b0dmgh0r34arg"]

[ext_resource type="Script" path="res://level1.gd" id="1_fcjna"]
[ext_resource type="Texture2D" uid="uid://ctc75pblwhkfl" path="res://Images/abstract-colorful-galaxy-space-background-free-vector.jpg" id="1_vaijj"]
[ext_resource type="FontFile" uid="uid://dkppgt0hpuagh" path="res://fonts/Robot Go.ttf" id="2_ej3b7"]
[ext_resource type="PackedScene" uid="uid://deyvy83bi0rnp" path="res://texture_rect.tscn" id="4_g2mfi"]

[node name="Lvl1" type="Node2D"]
script = ExtResource("1_fcjna")

[node name="Background" type="TextureRect" parent="."]
offset_right = 1380.0
offset_bottom = 1265.0
texture = ExtResource("1_vaijj")

[node name="questionbox1" type="ColorRect" parent="."]
offset_left = -3.0
offset_top = 405.0
offset_right = 1380.0
offset_bottom = 1263.0
color = Color(0.947428, 0.804832, 0.769889, 1)

[node name="answerbox1" type="ColorRect" parent="."]
offset_left = 1068.0
offset_top = 405.0
offset_right = 1380.0
offset_bottom = 986.0
color = Color(0.926794, 0.838448, 0.871891, 1)

[node name="TitleLabel1" type="Label" parent="."]
offset_left = 622.0
offset_top = 37.0
offset_right = 735.0
offset_bottom = 75.0
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("2_ej3b7")
theme_override_font_sizes/font_size = 33
text = "Level 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnswerKey1" type="Label" parent="."]
offset_left = 1167.0
offset_top = 422.0
offset_right = 1296.0
offset_bottom = 445.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_ej3b7")
theme_override_font_sizes/font_size = 20
text = "Answer Key:"

[node name="SentenceLabel1" type="Label" parent="."]
offset_left = 54.0
offset_top = 426.0
offset_right = 883.0
offset_bottom = 899.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_ej3b7")
theme_override_font_sizes/font_size = 25
text = "Test"
autowrap_mode = 3

[node name="Button" type="Button" parent="."]
offset_left = 912.0
offset_top = 864.0
offset_right = 1053.0
offset_bottom = 914.0
theme_override_colors/font_hover_color = Color(0.739161, 0.52774, 0.623008, 1)
theme_override_fonts/font = ExtResource("2_ej3b7")
theme_override_font_sizes/font_size = 20
text = "Submit"

[node name="NextLevel2" type="Button" parent="."]
offset_left = 917.0
offset_top = 417.0
offset_right = 1058.0
offset_bottom = 467.0
theme_override_colors/font_hover_pressed_color = Color(1, 0.682119, 0.631921, 1)
theme_override_fonts/font = ExtResource("2_ej3b7")
theme_override_font_sizes/font_size = 20
text = "Next Level"

[node name="TextLvl1" parent="." instance=ExtResource("4_g2mfi")]
offset_left = 188.0
offset_top = 547.0
offset_right = 390.0
offset_bottom = 602.0

[node name="TextLvl2" parent="." instance=ExtResource("4_g2mfi")]
offset_left = 241.0
offset_top = 1078.0
offset_right = 443.0
offset_bottom = 1137.0

[node name="TextLvl3" parent="." instance=ExtResource("4_g2mfi")]
offset_left = 400.0
offset_top = 741.0
offset_right = 602.0
offset_bottom = 800.0
